<resources>
    <string name="app_name">CPS精密製造</string>
    <string name="action_settings">Settings</string>
    <string name="measure_select_confirm">開始測量</string>
    <string name="measure_select_help">量測任務選擇</string>
    <string name="measure_picture_title">量測任務圖示</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="itri_ble_device_1">Unkown </string>
    <string name="scan_btn">尋找更多設備...</string>
    <string name="db_setting">進階設定伺服器</string>
    <string name="db_setting_default">恢復預設值</string>
    <string name="scan_stop_btn">停止搜尋...</string>
    <string name="add_new_device">新增常用裝置</string>
    <string name="switch_btn">更換測量工具</string>
    <string name="app_title">CPS精密製造系統</string>
    <string name="part_string">選擇工具:</string>
    <string name="partserial_string">選擇工件:</string>
    <string name="work_string">選擇工單:</string>

    <string name="copyright">2016 Copyright ©, Industrial Technology Research Institute, 工業技術研究院</string>
    <string name="txt_default">N/A</string>
    <string name="meas_view_title">指定量測說明圖</string>
    <string name="meas_data_title">數據量測結果</string>
    <string name="meas_view_help">請依照量測指示量測</string>
    <string name="device">數據來源工具:</string>
    <string name="meas_data">量測值:</string>

    <string name="show_workId">程序標號</string>
    <string name="show_measID">量測編號</string>
    <string name="show_normalSize">公稱尺寸</string>
    <string name="show_toleranceU">公差上限</string>
    <string name="show_toleranceL">公差下限</string>
    <string name="show_finalMeas">最終尺寸</string>
    <string name="show_isKeyMeas">關鍵尺寸</string>
    <string name="show_value">量測值</string>
    <string name="show_data">檢視資料</string>
    <string name="setting">設定</string>
    <string name="setting_view">狀態</string>
    <string name="setting_connected_device_title">目前連線裝置:</string>
    <string name="setting_connected_server_title">目前連線資料庫:</string>
    <string name="setting_default_sensor">設定預設連結裝置</string>

    <string name="setting_scan_state_connecting">尋找裝置中</string>
    <string name="setting_scan_state_show">附近藍芽裝置</string>
    


    <string name="unknown_device">未知裝置</string>
    <string name="device_offline">裝置離線</string>
    <string name="service_offline">資料庫維護中，請稍後再嘗試...</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>


</resources>
