<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"

    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_width="200dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_select_help"
                android:textSize="18dp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:paddingBottom="5dp"/>

            <TextView
                android:text="@string/part_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:paddingTop="5dp"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/view_select_part"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                />

            <TextView
                android:text="@string/partserial_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:paddingTop="5dp"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/view_select_work"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:text="@string/work_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:paddingTop="5dp"
                android:textSize="18sp" />
            <Spinner
                android:id="@+id/view_select_process"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="0.9"
            android:layout_height="match_parent">

            <Button
                android:text="@string/show_data"
                android:textSize="24dp"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_success"
                android:textColor="@color/white"
                android:id="@+id/view_button"
                android:layout_weight="0.1" />

        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" >

                <TextView
                    android:text="@string/show_workId"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/show_measID"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/show_normalSize"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/show_toleranceU"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/show_toleranceL"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/show_finalMeas"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/show_isKeyMeas"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:text="@string/show_value"
                    android:layout_width="56dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/view_data"
                android:layout_weight="0.1" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>