<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    android:layout_height="match_parent"
    android:weightSum="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >


            <TextView
            android:text="@string/part_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/select_part"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:text="@string/partserial_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="18sp" />
        <Spinner
            android:id="@+id/select_work"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:text="@string/work_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="18sp" />
        <Spinner
            android:id="@+id/select_process"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:text="@string/measure_select_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/success"
        android:textColor="@color/white"
        android:id="@+id/button"
        android:layout_weight="0.1" />

</LinearLayout>