<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24dp"
                    android:paddingBottom="5dp"
                    android:text="@string/setting_view" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg" />

                <LinearLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_connected_device_title"
                        android:textSize="18dp"/>
                    <Space android:layout_width="5dp"
                        android:layout_height="wrap_content"/>
                    <TextView android:id="@+id/setting_connected_device"
                        android:text="@string/txt_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"/>


                </LinearLayout>

                <LinearLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_connected_server_title"
                        android:textSize="18dp"/>
                    <Space android:layout_width="5dp"
                        android:layout_height="wrap_content"/>
                    <TextView android:id="@+id/setting_connected_server"
                        android:text="@string/txt_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"/>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24dp"
                    android:paddingBottom="5dp"
                    android:text="@string/setting" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg" />

                <Button
                    android:paddingLeft="12dp"
                    android:textSize="18dp"
                    android:textColor="@android:color/tertiary_text_light"
                    android:background="@color/white"
                    android:text="@string/db_setting"
                    android:textAlignment="textStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setting_set_db"
                    style="@style/Widget.AppCompat.Button.Borderless" />

                <Button
                    android:paddingLeft="12dp"
                    android:textSize="18dp"
                    android:textColor="@android:color/tertiary_text_light"
                    android:background="@color/white"
                    android:text="@string/db_setting_default"
                    android:textAlignment="textStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setting_set_db_default"
                    style="@style/Widget.AppCompat.Button.Borderless" />

                <Button
                    android:paddingLeft="12dp"
                    android:textSize="18dp"
                    android:textColor="@android:color/tertiary_text_light"
                    android:background="@color/white"
                    android:text="@string/setting_default_sensor"
                    android:textAlignment="textStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setting_set_sensor_default"
                    style="@style/Widget.AppCompat.Button.Borderless" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">
                        <Button
                            android:paddingLeft="12dp"
                            android:textSize="18dp"
                            android:textColor="@android:color/tertiary_text_light"
                            android:text="@string/scan_btn"
                            android:background="@color/white"
                            android:textAlignment="textStart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/setting_scan_new_ble"
                            style="@style/Widget.AppCompat.Button.Borderless" />
                    </LinearLayout>


                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/progressBarView"
                        android:layout_width="match_parent"
                        android:layout_weight="8"
                        android:layout_height="match_parent"></LinearLayout>

                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg" />

            </LinearLayout>

            <ListView
            android:id="@+id/BLE_device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
